# rg35xx-mtp-server

./: CMakeLists.txt  README.md  compile.sh
artifacts/MISC/: usb.sh
artifacts/ROMS/CFW/autostart/: mtp.sh
artifacts/ROMS/CFW/mtp/: mtp-server  run.sh
artifacts/ROMS/Roms/APPS/: Disable USB MTP.sh
include/: mtp.h
server/: CMakeLists.txt  UbuntuMtpDatabase.h  server.cpp
src/: MtpDataPacket.cpp  MtpDevice.cpp  MtpDeviceInfo.cpp  MtpObjectInfo.cpp  MtpPacket.cpp  MtpProperty.cpp  MtpServer.cpp  MtpStorage.cpp  MtpStorageInfo.cpp
